--- a/src/YouTubePlayer.css
+++ b/src/YouTubePlayer.css
@@ -17,6 +17,15 @@ You should have received a copy of the GNU Affero General Public License along
 with Musician's Remote. If not, see <https://www.gnu.org/licenses/>.
 */
 
-#App {
-  margin: 10px;
+#youtube-player-div {
+  position: relative;
+  padding-top: 56.25%;
+}
+
+#youtube-player {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
 }
