--- a/src/YouTubePlayer.css
+++ b/src/YouTubePlayer.css
@@ -17,6 +17,8 @@ You should have received a copy of the GNU Affero General Public License along
 with Musician's Remote. If not, see <https://www.gnu.org/licenses/>.
 */
 
+/* See: https://jameshfisher.com/2017/08/30/how-do-i-make-a-full-width-iframe/ */
+
 #youtube-player-div {
   position: relative;
   padding-top: 56.25%;
