--- a/src/App.scss
+++ b/src/App.scss
@@ -17,17 +17,32 @@ You should have received a copy of the GNU Affero General Public License along
 with Musician's Remote. If not, see <https://www.gnu.org/licenses/>.
 */
 
-/* See: https://jameshfisher.com/2017/08/30/how-do-i-make-a-full-width-iframe/ */
-
-#youtube-player-div {
-  position: relative;
-  padding-top: 56.25%;
+.App {
+  display: grid;
+  gap: 1vw;
+  margin: 1vw;
+  width: 100vw;
+  height: 100vh;
 }
 
-#youtube-player {
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
+@media (orientation: landscape) {
+  .App {
+    grid-template-rows: 1fr repeat(3, auto) 1fr;
+    grid-template-columns: repeat(3, 1fr);
+    grid-template-areas:
+      ". .              ."
+      ". UrlBar         ."
+      ". YouTubePlayer  ."
+      ". Controls       ."
+      ". .              .";
+  }
+  .UrlBar {
+    grid-area: UrlBar;
+  }
+  .YouTubePlayer {
+    grid-area: YouTubePlayer;
+  }
+  .Controls {
+    grid-area: Controls;
+  }
 }
