--- a/src/YouTubePlayer.scss
+++ b/src/YouTubePlayer.scss
@@ -17,46 +17,17 @@ You should have received a copy of the GNU Affero General Public License along
 with Musician's Remote. If not, see <https://www.gnu.org/licenses/>.
 */
 
-.App {
-  display: grid;
-  gap: 1vw;
-  margin: 1vw;
+/* See: https://jameshfisher.com/2017/08/30/how-do-i-make-a-full-width-iframe/ */
+
+.youtube-player-div {
+  position: relative;
+  padding-top: 56.25%;
 }
 
-@media (orientation: landscape) {
-  .App {
-    grid-template-columns: repeat(3, 1fr);
-    grid-template-areas:
-      ". UrlBar ."
-      ". YouTubePlayer ."
-      ". Controls .";
-  }
-  .UrlBar {
-    grid-area: UrlBar;
-  }
-  .YouTubePlayer {
-    grid-area: YouTubePlayer;
-  }
-  .Controls {
-    grid-area: Controls;
-  }
-}
-
-@media (orientation: portrait) and (min-aspect-ratio: 10 / 15) {
-  .App {
-    grid-template-columns: 10vw 1fr 10vw;
-    grid-template-areas:
-      ". UrlBar ."
-      ". YouTubePlayer ."
-      ". Controls .";
-  }
-  .UrlBar {
-    grid-area: UrlBar;
-  }
-  .YouTubePlayer {
-    grid-area: YouTubePlayer;
-  }
-  .Controls {
-    grid-area: Controls;
-  }
+.youtube-player-iframe {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
 }
