Add URLBar functionality

--- a/src/YouTubePlayer.scss
+++ b/src/YouTubePlayer.scss
@@ -22,6 +22,7 @@ with Musician's Remote. If not, see <https://www.gnu.org/licenses/>.
 .youtube-player-div {
   position: relative;
   padding-top: 56.25%;
+  background: black;
 }
 
 .youtube-player-iframe {
