--- a/src/YouTubePlayer.scss
+++ b/src/YouTubePlayer.scss
@@ -19,7 +19,7 @@ with Musician's Remote. If not, see <https://www.gnu.org/licenses/>.
 
 /* See: https://jameshfisher.com/2017/08/30/how-do-i-make-a-full-width-iframe/ */
 
-.youtube-player-div {
+.YouTubePlayer {
   position: relative;
   padding-top: 56.25%;
   background: black;
@@ -31,4 +31,5 @@ with Musician's Remote. If not, see <https://www.gnu.org/licenses/>.
   left: 0;
   width: 100%;
   height: 100%;
+  border: none;
 }
