Use API-created player

--- a/src/YouTubePlayer.scss
+++ b/src/YouTubePlayer.scss
@@ -25,7 +25,7 @@ with Musician's Remote. If not, see <https://www.gnu.org/licenses/>.
   background: black;
 }
 
-.youtube-player-iframe {
+.youtube-player-inner-div {
   position: absolute;
   top: 0;
   left: 0;
