--- a/src/YouTubePlayer.scss
+++ b/src/YouTubePlayer.scss
@@ -21,6 +21,7 @@ with Musician's Remote. If not, see <https://www.gnu.org/licenses/>.
   position: relative;
   padding-top: 56.25%;
   background: black;
+  touch-action: none;
 }
 
 .youtube-player-inner-div {
