Add AppBar to Settings

--- a/src/footer/SettingsAppBar.scss
+++ b/src/footer/SettingsAppBar.scss
@@ -17,20 +17,8 @@ You should have received a copy of the GNU Affero General Public License along
 with Musician's Remote. If not, see <https://www.gnu.org/licenses/>.
 */
 
-import playerAPIConnector from "../playerAPIConnector";
+.settings-toolbar {
+}
 
-import Button from "@mui/material/Button";
-
-// TODO: Change paused behaviour
-export default function SkipButton({ className, amount }) {
-  return (
-    <Button className={className} onClick={onClick} variant="contained">
-      {"Skip " + amount}
-    </Button>
-  );
-
-  function onClick() {
-    const currentTime = playerAPIConnector.playerAPI.getCurrentTime();
-    playerAPIConnector.playerAPI.seekTo(currentTime + amount, true);
-  }
+.settings-toolbar-close {
 }
