--- a/src/footer/SettingsAppBar.scss
+++ b/src/footer/SettingsAppBar.scss
@@ -17,8 +17,22 @@ You should have received a copy of the GNU Affero General Public License along
 with Musician's Remote. If not, see <https://www.gnu.org/licenses/>.
 */
 
-.settings-toolbar {
+@use "../breakpoints.scss";
+
+.settings-toolbar-title {
+  flex-grow: 1;
 }
 
-.settings-toolbar-close {
+@mixin set-breakpoint-gap($breakpoint, $gap) {
+  @media (min-width: $breakpoint) {
+    .settings-toolbar {
+      gap: $gap;
+    }
+  }
 }
+
+@include set-breakpoint-gap(breakpoints.$xs-breakpoint, breakpoints.$xs-gap);
+@include set-breakpoint-gap(breakpoints.$sm-breakpoint, breakpoints.$sm-gap);
+@include set-breakpoint-gap(breakpoints.$md-breakpoint, breakpoints.$md-gap);
+@include set-breakpoint-gap(breakpoints.$lg-breakpoint, breakpoints.$lg-gap);
+@include set-breakpoint-gap(breakpoints.$xl-breakpoint, breakpoints.$xl-gap);
