--- a/src/footer/SettingsAppBar.scss
+++ b/src/footer/SettingsAppBar.scss
@@ -19,6 +19,10 @@ with Musician's Remote. If not, see <https://www.gnu.org/licenses/>.
 
 @use "../breakpoints.scss";
 
+.SettingsAppBar {
+  position: relative !important;
+}
+
 .settings-toolbar-title {
   flex-grow: 1;
 }
