--- a/src/footer/SettingsAppBar.scss
+++ b/src/footer/SettingsAppBar.scss
@@ -23,7 +23,7 @@ with Musician's Remote. If not, see <https://www.gnu.org/licenses/>.
   position: relative !important;
 }
 
-.settings-toolbar-title {
+.SettingsToolbarTitle {
   flex-grow: 1;
 }
 
