Move Controls and Footer to their subdirectories

--- a/src/controls/Controls.scss
+++ b/src/controls/Controls.scss
@@ -17,7 +17,7 @@ You should have received a copy of the GNU Affero General Public License along
 with Musician's Remote. If not, see <https://www.gnu.org/licenses/>.
 */
 
-@use "./breakpoints.scss";
+@use "../breakpoints.scss";
 
 // TODO: minmax
 // TODO: Maybe change aspect ratio to make the squares a square
