--- a/src/App.scss
+++ b/src/App.scss
@@ -23,7 +23,7 @@ with Musician's Remote. If not, see <https://www.gnu.org/licenses/>.
 
 .App {
   display: flex;
-  height: 100vh;
+  height: 100svh;
   justify-content: center;
   overflow: hidden;
   touch-action: none;
