--- a/src/settings/SlowSpeedSettingSlider.scss
+++ b/src/settings/SlowSpeedSettingSlider.scss
@@ -16,3 +16,8 @@ more details.
 You should have received a copy of the GNU Affero General Public License along
 with Musician's Remote. If not, see <https://www.gnu.org/licenses/>.
 */
+
+.SlowSpeedSettingSlider {
+  flex-basis: 50vw;
+  margin-right: 5vw;
+}
