--- a/src/settings/SettingsHeader.scss
+++ b/src/settings/SettingsHeader.scss
@@ -20,3 +20,7 @@ with Musician's Remote. If not, see <https://www.gnu.org/licenses/>.
 .SettingsHeader {
   display: flex;
 }
+
+.SettingsHeaderLabel {
+  flex-grow: 1;
+}
