--- a/src/settings/ControlsGridSetting.scss
+++ b/src/settings/ControlsGridSetting.scss
@@ -17,13 +17,10 @@ You should have received a copy of the GNU Affero General Public License along
 with Musician's Remote. If not, see <https://www.gnu.org/licenses/>.
 */
 
-export const PLAY_BUTTON_GRID_AREA = "P";
-export const SPEED_BUTTON_GRID_AREA = "S";
-export const LOOP_BUTTON_GRID_AREA = "L";
-export const SKIP_BACKWARD_LONG_BUTTON_GRID_AREA = "BL";
-export const SKIP_BACKWARD_SHORT_BUTTON_GRID_AREA = "BS";
-export const SKIP_FORWARD_SHORT_BUTTON_GRID_AREA = "FS";
-export const SKIP_FORWARD_LONG_BUTTON_GRID_AREA = "FL";
+.ControlsGridSetting {
+  display: flex;
+}
 
-export const SKIP_BACKWARD_DIRECTION = -1;
-export const SKIP_FORWARD_DIRECTION = 1;
+.ControlsGridSettingLabel {
+  flex-grow: 1;
+}
