--- a/src/settings/ControlsGridSetting.scss
+++ b/src/settings/ControlsGridSetting.scss
@@ -21,6 +21,7 @@ with Musician's Remote. If not, see <https://www.gnu.org/licenses/>.
   display: flex;
   flex-direction: column;
   gap: 1vw;
+  overflow: hidden;
 }
 
 .ControlsGridSettingLabel {
