--- a/src/_breakpoints.scss
+++ b/src/_breakpoints.scss
@@ -23,8 +23,8 @@ $md-breakpoint: 900px;
 $lg-breakpoint: 1200px;
 $xl-breakpoint: 1536px;
 
-$xs-gap: 4vw;
-$sm-gap: 2vw;
-$md-gap: 1vw;
-$lg-gap: 1vw;
-$xl-gap: 1vw;
+$xs-spacing: 4vw;
+$sm-spacing: 2vw;
+$md-spacing: 1vw;
+$lg-spacing: 1vw;
+$xl-spacing: 1vw;
