--- a/src/controls/Controls.scss
+++ b/src/controls/Controls.scss
@@ -27,9 +27,7 @@ with Musician's Remote. If not, see <https://www.gnu.org/licenses/>.
 
 .controls-outer-div {
   position: relative;
-
-  // Make default layout skip buttons squares on mobile
-  padding-top: math.percentage(math.div(3.4, 4.6));
+  padding-top: 100%;
 }
 
 .controls-grid {
