Begin work on themeing

--- a/src/index.scss
+++ b/src/index.scss
@@ -19,6 +19,7 @@ with Musician's Remote. If not, see <https://www.gnu.org/licenses/>.
 
 body {
   margin: 0;
+  // Note: This does not apply to MUI components.
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
     "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
     sans-serif;
