--- a/src/controls/Controls.scss
+++ b/src/controls/Controls.scss
@@ -28,7 +28,7 @@ with Musician's Remote. If not, see <https://www.gnu.org/licenses/>.
 .controls-outer-div {
   position: relative;
 
-  // Make default layout skip buttons squares on mobile
+  // Cells in default layout on mobile become squares
   padding-top: math.percentage(math.div(3.4, 4.6));
 }
 
