Disable border radius for App

--- a/src/App.scss
+++ b/src/App.scss
@@ -25,6 +25,7 @@ with Musician's Remote. If not, see <https://www.gnu.org/licenses/>.
   justify-content: center;
   overflow: hidden;
   touch-action: none;
+  border-radius: 0 !important;
 }
 
 .app-inner {
