--- a/src/controls/Controls.scss
+++ b/src/controls/Controls.scss
@@ -28,6 +28,7 @@ with Musician's Remote. If not, see <https://www.gnu.org/licenses/>.
 .controls-outer-div {
   position: relative;
 
+  // TODO: Fix
   // Cells in default layout on mobile become squares
   padding-top: math.percentage(math.div(3.4, 4.6));
 }
