--- a/src/controls/Controls.scss
+++ b/src/controls/Controls.scss
@@ -29,7 +29,9 @@ with Musician's Remote. If not, see <https://www.gnu.org/licenses/>.
 .controls-outer-div {
   position: relative;
 
-  // Cells in default layout on mobile become squares
+  // Cells in default layout on mobile become squares.
+  // Calculation not possible for other sizes,
+  // because 100vw includes whitespace around controls.
   padding-top: math.percentage(math.div(17, 23));
 }
 
