--- a/src/App.scss
+++ b/src/App.scss
@@ -27,7 +27,7 @@ with Musician's Remote. If not, see <https://www.gnu.org/licenses/>.
   border-radius: 0 !important;
 }
 
-.app-header {
+header {
   display: flex;
 }
 
